========================================
Change log for datafield_template
========================================

2020-08-16 (47)
 - use <DL> + bootstrap classes in mod.html templates

2020-01-10 (46)
 - remove unused code to detect bilingual strings

2019-10-30 (44)
 - dasvfield_template standardize layout and spelling in CHANGES.txt

2019-10-30 (44)
 - detect and reduce multilang SPANs in field values when processing FORMATHTML content

2019-10-30 (43)
 - detect and reduce multilang SPANs in field descriptions when processing FORMATHTML content

2019-08-27 (41)
 - add new info fields: HAS_ROLE, HAS_CAPABILITY, MEMBER_GROUP, MEMBER_COHORT

2017-12-20 (40)
 - fix URL of secondary zip download site
 - add new standard method, 'get_config_for_external()'

2017-12-17 (39)
 - nudge version number

2017-12-17 (38)
 - add pix/icon.gif and new method to return correct icon for this plugin

2017-11-22 (37)
 - added 4 new formatting commands: WORDCOUNT, CHARCOUNT, MULTILANGTITLE, and BILINGUALTITLE

2017-11-14 (36)
 - reduce multilang text when converting radio/checkbox content to a list

2017-10-26 (35)
 - grab only a single newline following [[fieldname]] tokens

2017-10-25 (34)
 - fix small bug caused by overwriting $field object with a scalar value

2017-10-25 (33)
 - allow IF conditions on info fields such as currentlanguages

2017-10-25 (32)
 - exclude trailing currency info when converting multilang strings

2017-10-25 (31)
 - convert multilang field descriptions and value to preferred language

2017-10-25 (30)
 - add new commands to format field description + value: FORMATTEXT and FORMATHTML

2017-10-25 (28)
 - allow new fieldnames, 'currentlang' and 'currentlanguage' to allow  multilang content in templates

2017-10-25 (27)
 - allow new function to make COMMALIST and INDENTLIST

2017-10-25 (26)
 - allow new function to make lists and trim

2017-01-18 (25)
 - try harder to get recordids when exporting text values

2017-01-18 (24)